<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_build"
            android:icon="@drawable/ic_personal_video_black_24dp"
            android:title="@string/build"

            />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/setting"
            />
    </group>
    <item android:title="@string/more_menu">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about"
                />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_clear_black_24dp"
                android:title="@string/logout"
                />
        </menu>
    </item>


</menu>